--- a/src/main/webapp/help.html
+++ b/src/main/webapp/help.html
@@ -42,7 +42,7 @@
     transform: translateY(-2px);
   }
 
-  /* Headings */
+  /*add Headings */
   h1 {
     font-size: 2.5rem;
     font-weight: 700;
