--- a/src/main/webapp/help.html
+++ b/src/main/webapp/help.html
@@ -89,7 +89,7 @@
     color: #ffd700;
   }
 
-  /* Responsive */
+  /* add Responsive */
   @media (max-width: 600px) {
     .container { padding: 30px 25px; }
     h1 { font-size: 2rem; }
