--- a/src/main/webapp/add_item.html
+++ b/src/main/webapp/add_item.html
@@ -19,7 +19,7 @@
     color: #fff;
   }
 
-  /* Navbar */
+  /*update item Navbar */
   nav {
     backdrop-filter: blur(12px);
     background: rgba(255, 255, 255, 0.1);
